--- a/android/src/main/res/layout/azure_communication_ui_calling_bottom_drawer_cell.xml
+++ b/android/src/main/res/layout/azure_communication_ui_calling_bottom_drawer_cell.xml
@@ -2,13 +2,13 @@
    Copyright (c) Microsoft Corporation. All rights reserved.
    Licensed under the MIT License.
   -->
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:minHeight="48dp"
-    android:focusable="true"
-    >
+    android:focusable="true">
 
     <ImageView
         android:id="@+id/azure_communication_ui_cell_bottom_drawer_divider"
@@ -18,8 +18,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:background="@color/azure_communication_ui_calling_color_surface"
-        />
+        android:background="@color/azure_communication_ui_calling_color_surface" />
 
     <ImageView
         android:id="@+id/azure_communication_ui_cell_icon"
@@ -31,8 +30,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_speaker"
         android:importantForAccessibility="no"
-        app:tint="@color/purple"
-        />
+        app:tint="@color/purple" />
 
     <com.microsoft.fluentui.persona.AvatarView
         android:id="@+id/azure_communication_ui_participant_list_avatar"
@@ -43,8 +41,8 @@
         app:fluentui_avatarSize="medium"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
+
     <com.microsoft.fluentui.persona.AvatarView
         android:id="@+id/azure_communication_ui_participant_list_avatar_image"
         android:layout_width="32dp"
@@ -54,15 +52,14 @@
         app:fluentui_avatarSize="medium"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
+
     <androidx.constraintlayout.widget.Barrier
         android:id="@+id/azure_communication_ui_barrier_start_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:barrierDirection="end"
-        app:constraint_referenced_ids="azure_communication_ui_cell_icon, azure_communication_ui_participant_list_avatar, azure_communication_ui_participant_list_avatar_image"
-        />
+        app:constraint_referenced_ids="azure_communication_ui_cell_icon, azure_communication_ui_participant_list_avatar, azure_communication_ui_participant_list_avatar_image" />
 
     <LinearLayout
         android:id="@+id/azure_communication_ui_calling_bottom_drawer_title_subtitle_layout"
@@ -91,6 +88,7 @@
             android:layout_gravity="center_vertical"
             android:textAppearance="@style/Text.CircularStdBook.16sp"
             android:visibility="gone" />
+
     </LinearLayout>
 
     <ImageView
@@ -105,8 +103,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:tint="@color/purple"
-        />
+        app:tint="@color/purple" />
 
     <ImageView
         android:id="@+id/azure_communication_ui_calling_bottom_drawer_cell_arrow_next"
@@ -120,7 +117,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:tint="@color/azure_communication_ui_calling_toggle_selector" />
+        app:tint="@color/purple" />
 
     <androidx.appcompat.widget.SwitchCompat
         android:id="@+id/azure_communication_ui_calling_bottom_drawer_toggle_button"
@@ -148,14 +145,13 @@
         android:textColor="@color/azure_communication_ui_calling_color_participant_list_mute_mic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.Barrier
         android:id="@+id/azure_communication_ui_barrier_end_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:barrierDirection="start"
-        app:constraint_referenced_ids="azure_communication_ui_cell_check_mark, azure_communication_ui_cell_additional_text"
-        />
+        app:constraint_referenced_ids="azure_communication_ui_cell_check_mark, azure_communication_ui_cell_additional_text" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
