--- a/android/src/main/res/values/dimens.xml
+++ b/android/src/main/res/values/dimens.xml
@@ -40,6 +40,7 @@
     <dimen name="margin_12dp">12dp</dimen>
     <dimen name="margin_18dp">18dp</dimen>
     <dimen name="margin_10dp">10dp</dimen>
+    <dimen name="margin_32dp">32dp</dimen>
     <dimen name="margin_minus_12dp">-12dp</dimen>
     <dimen name="margin_minus_8dp">-8dp</dimen>
     <dimen name="margin_minus_6dp">-6dp</dimen>
@@ -75,6 +76,7 @@
     <dimen name="icon_size_14dp">14dp</dimen>
     <dimen name="icon_size_18dp">18dp</dimen>
     <dimen name="icon_size_24dp">24dp</dimen>
+    <dimen name="icon_size_26dp">26dp</dimen>
 
     <!-- Progress size -->
     <dimen name="progress_size_24dp">24dp</dimen>
