--- a/android/src/main/res/layout/azure_communication_ui_calling_participant_video_view.xml
+++ b/android/src/main/res/layout/azure_communication_ui_calling_participant_video_view.xml
@@ -35,6 +35,15 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent">
 
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/azure_communication_ui_participant_view_on_video_raise_hand_indicator"
+                android:layout_width="@dimen/icon_size_14dp"
+                android:layout_height="@dimen/icon_size_14dp"
+                android:layout_gravity="center"
+                android:layout_marginEnd="@dimen/margin_4dp"
+                app:tint="@color/yellow"
+                app:srcCompat="@drawable/ic_raised_hand" />
+
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/azure_communication_ui_participant_view_on_video_display_name"
                 android:layout_width="wrap_content"
