--- a/android/src/main/res/values/colors.xml
+++ b/android/src/main/res/values/colors.xml
@@ -12,6 +12,7 @@
     <color name="success">#2EEE63</color>
     <color name="error">#DC2626</color>
     <color name="yellow">#FAC565</color>
+    <color name="orange">#EC6E00</color>
     <color name="white">#FFFFFF</color>
 
     <color name="purple_op_60">#996048DE</color>
